added in URL constant and addPet method

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,11 @@
   </head>
   <body ng-app="app">
     <div class="container" ng-controller="HomeController">
-      <p>{{ name }}</p>
+      <form ng-submit="addPet(pet)">
+        <input ng-model="pet.name" type="text" class="input" placeholder="Pet Name">
+        <input ng-model="pet.age" type="number" class="input" placeholder="Pet Age">
+        <button class="button">Add Pet</button>
+      </form>
     </div>
     <script src="js/bundle.js"></script>
   </body>
